--- a/roles/kubeadm/meta/main.yml
+++ b/roles/kubeadm/meta/main.yml
@@ -36,5 +36,6 @@ dependencies:
     download_artifact_url: "{{ kubeadm_download_url }}"
     download_artifact_dest: "{{ kubeadm_download_dest }}"
     download_artifact_checksum: "sha256:{{ kubeadm_binary_checksum }}"
+    download_artifact_mirror_version: "{{ kubeadm_version }}"
     download_artifact_owner: root
     download_artifact_mode: "0755"
