--- a/roles/kubelet/meta/main.yml
+++ b/roles/kubelet/meta/main.yml
@@ -39,5 +39,6 @@ dependencies:
     download_artifact_url: "{{ kubelet_download_url }}"
     download_artifact_dest: "{{ kubelet_download_dest }}"
     download_artifact_checksum: "sha256:{{ kubelet_binary_checksum }}"
+    download_artifact_mirror_version: "{{ kubelet_version }}"
     download_artifact_owner: root
     download_artifact_mode: "0755"
